Fixed caption color in Single Work Accordion in dark mode.
Commented out box-shadow in Mockup Slider to better match the style of the updated images.

Updated typewriter animations in PageAbout component with emojis.

--- a/src/scss/_darkMode.scss
+++ b/src/scss/_darkMode.scss
@@ -66,6 +66,10 @@
 
         .accordion-content {
             background-color: rgba($primary-color, 0.8);
+
+            .gallery-caption {
+                color: rgba($base-color-light, 0.8);
+            }
         }
 
         .other-works .carousel-wrapper .carousel .work-basic-info {
