--- a/src/scss/_work.scss
+++ b/src/scss/_work.scss
@@ -189,7 +189,7 @@
                 height: auto;
                 max-height: 100%;
                 object-fit: contain;
-                box-shadow: rgba(0, 0, 0, 0.2) 0 4px 12px;
+                // box-shadow: rgba(0, 0, 0, 0.2) 0 4px 12px;
                 user-select: none;
                 -webkit-user-drag: none;
             }
